--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GestionEscuelaAndroid</string>
+    <string name="app_name">Gestion Escuela</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="server">Servidor</string>
     <string name="user_name">Nombre de Usuario</string>
     <string name="password">Contraseña</string>
     <string name="button_connect">Conectarse</string>
-    <string name="title_activity_service_list">ServiceListActivity</string>
+    <string name="title_activity_service_list">Gestion Escuela</string>
     <string name="service_list_title">Service List</string>
     <string name="title_activity_actions_list">ActionsListActivity</string>
     <string name="actionlist_title">Action List</string>
-    <string name="List_Students">Listar Alumnos</string>
-    <string name="title_activity_students_list">StudentsListActivity</string>
+    <string name="List_Students">Listado de Alumnos</string>
+    <string name="title_activity_students_list">Listado de Alumnos</string>
     <string name="title_activity_mostrar_alumno">MostrarAlumnoActivity</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-    <string name="title_activity_main_activity2">MainActivity2</string>
-    <string name="title_activity_datos_alumno">DatosAlumnoActivity</string>
+    <string name="title_activity_datos_alumno">Datos del Alumno</string>
     <string name="alumno_nombre_label">Nombre:</string>
     <string name="apellido_nombre_label">Apellido:</string>
+    <string name="alumno_dni_label">DNI:</string>
+    <string name="textView_alumno_fechaNac_label">Nacido:</string>
+    <string name="checkBox_savePassword">Guardar Contraseña</string>
 
 </resources>
